[package]
name = "nixihash"
version = "0.1.0"
authors = ["Andika Demas Riyandi <andika.riyan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
clap = "~2.27.0"
base16 = "~0.2.1"
base64 = "~0.12.3"
