[package]
name = "rnix-hashes"
version = "0.1.0"
authors = ["Andika Demas Riyandi <andika.riyan@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Nix hash converter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16 = "~0.2.1"
base64 = "~0.12.3"
clap = "~2.27.0"
lazy_static = "1.4"
unindent = "~0.1.6"
